--- a/package.json
+++ b/package.json
@@ -10,8 +10,7 @@
   },
   "devDependencies": {
     "@nuxt-themes/docus": "^1.10.1",
-    "nuxt": "^3.3.3"
-  },
-  "dependencies": {
+    "nuxt": "^3.3.3",
+    "nuxt-content-assets": "^0.7.0"
   }
 }
