--- a/package.json
+++ b/package.json
@@ -1,16 +1,21 @@
 {
-  "name": "docus-starter",
+  "name": "alloe",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
-    "preview": "nuxi preview"
+    "preview": "nuxi preview",
+    "lint": "eslint ."
   },
   "devDependencies": {
-    "@nuxt-themes/docus": "^1.10.1",
-    "nuxt": "^3.3.3",
-    "nuxt-content-assets": "^0.9.0-beta"
+    "@nuxt-themes/docus": "^1.13.0",
+    "@nuxt/devtools": "^0.6.6",
+    "@nuxt/eslint-config": "^0.1.1",
+    "@types/node": "^20.2.5",
+    "eslint": "^8.42.0",
+    "nuxt": "^3.6.1",
+    "nuxt-content-assets": "^1.3.2"
   }
 }
