--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@nuxt/devtools": "^0.6.6",
     "@nuxt/eslint-config": "^0.1.1",
     "@types/node": "^20.2.5",
+    "@vite-pwa/nuxt": "^0.1.0",
     "eslint": "^8.42.0",
     "nuxt": "^3.6.1",
     "nuxt-content-assets": "^1.3.2"
