--- a/package.json
+++ b/package.json
@@ -6,16 +6,12 @@
     "dev": "nuxi dev",
     "build": "nuxi build",
     "generate": "nuxi generate",
-    "preview": "nuxi preview",
-    "lint": "eslint ."
+    "preview": "nuxi preview"
   },
   "devDependencies": {
-    "@nuxt-themes/docus": "^1.13.0",
-    "@nuxt/devtools": "^0.6.6",
-    "@nuxt/eslint-config": "^0.1.1",
+    "@nuxt-themes/docus": "^1.15.0",
     "@types/node": "^20.2.5",
-    "eslint": "^8.42.0",
-    "nuxt": "^3.6.1",
-    "nuxt-content-assets": "^1.3.2"
+    "nuxt": "^3.7.4",
+    "nuxt-content-assets": "^1.3.3"
   }
 }
